storage/innobase/include/srv0srv.h
@@ -492,7 +492,6 @@ extern my_bool	srv_ibuf_disable_background_merge;
 extern my_bool	srv_purge_view_update_only_debug;
 #endif /* UNIV_DEBUG */
 
-extern ulint	srv_fatal_semaphore_wait_threshold;
 #define SRV_SEMAPHORE_WAIT_EXTENSION	7200
 extern ulint	srv_dml_needed_delay;
 
@@ -530,6 +529,11 @@ extern srv_stats_t	srv_stats;
 
 /** Simulate compression failures. */
 extern uint srv_simulate_comp_failures;
+
+/** Fatal semaphore wait threshold = maximum number of seconds
+that semaphore times out in InnoDB */
+#define DEFAULT_SRV_FATAL_SEMAPHORE_TIMEOUT 600
+extern ulong	srv_fatal_semaphore_wait_threshold;
 
 # ifdef UNIV_PFS_THREAD
 /* Keys to register InnoDB threads with performance schema */
