storage/innobase/lock/lock0lock.cc
@@ -4987,6 +4987,9 @@ lock_table(
 
 	lock_mutex_enter();
 
+	DBUG_EXECUTE_IF("fatal-semaphore-timeout",
+		{ os_thread_sleep(3600000000); });
+
 	/* We have to check if the new lock is compatible with any locks
 	other transactions have in the table lock queue. */
 
