storage/innobase/srv/srv0srv.cc
@@ -80,7 +80,7 @@ extern int wsrep_debug;
 extern int wsrep_trx_is_aborting(void *thd_ptr);
 #endif
 /* The following is the maximum allowed duration of a lock wait. */
-UNIV_INTERN ulint	srv_fatal_semaphore_wait_threshold = 600;
+UNIV_INTERN ulong	srv_fatal_semaphore_wait_threshold =  DEFAULT_SRV_FATAL_SEMAPHORE_TIMEOUT;
 
 /* How much data manipulation language (DML) statements need to be delayed,
 in microseconds, in order to reduce the lagging of the purge thread. */
